--- a/root/package.json
+++ b/root/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "blocks-subscribe-email": "https://github.com/blocks/subscribe-email/releases/download/v1.1.0/blocks-subscribe-email-1.1.0.tgz",
+    "browserify": "^7.0.0",
     "gulp": "^3.8.7",
     "gulp-changed": "^0.4.1",
     "gulp-concat": "^2.3.4",
@@ -24,11 +25,14 @@
     "handlebars": "1.3.x",
     "handlebars-helper": "0.0.x",
     "hbsfy": "~1.3.2",
+    "js-yaml": "^3.2.3",
     "jungle-solidus": "sparkartgroupinc/jungle-solidus",
     "minimist": "^1.1.0",
     "run-sequence": "^1.0.1",
+    "uglifyify": "^2.6.0",
     "underscore": "^1.7.0",
-    "underscore.string": "^2.3.3"
+    "underscore.string": "^2.3.3",
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
     "solidus": "solidusjs/solidus#104-external-partials-rebased",
