--- a/root/package.json
+++ b/root/package.json
@@ -8,7 +8,7 @@
     "watch": "gulp _watch"
   },
   "devDependencies": {
-    "blocks-subscribe-email": "https://github.com/blocks/subscribe-email/releases/download/v1.1.0/blocks-subscribe-email-1.1.0.tgz",
+    "blocks-subscribe-email": "^2.0.0",
     "browserify": "^7.0.0",
     "gulp": "^3.8.7",
     "gulp-changed": "^0.4.1",
