configure mailing list service dynamically
configure mailing list service dynamically based on the presence of a MailChimp vs. Universe key in the site globals

--- a/root/site.yml
+++ b/root/site.yml
@@ -2,7 +2,9 @@ integrations:
   facebook_app_id:
   addthis_publisher_id:
   analytics_id:
-  mailinglist_apikey:
+  sendgrid_apikey:
+  universe_apikey:
+  mailchimp_url:
 feeds:
   - title:
     url:
