--- a/root/package.json
+++ b/root/package.json
@@ -8,6 +8,7 @@
     "watch": "gulp _watch"
   },
   "devDependencies": {
+    "blocks-alerter": "^1.1.0",
     "blocks-subscribe-email": "^2.1.0",
     "browserify": "^7.0.0",
     "gulp": "^3.8.7",
