--- a/root/package.json
+++ b/root/package.json
@@ -26,6 +26,7 @@
     "hbsfy": "~1.3.2",
     "jungle-solidus": "sparkartgroupinc/jungle-solidus",
     "minimist": "^1.1.0",
+    "require-dir": "^0.1.0",
     "run-sequence": "^1.0.1",
     "uglifyify": "^2.6.0",
     "underscore": "^1.7.0",
@@ -34,7 +35,6 @@
   },
   "dependencies": {
     "solidus": "solidusjs/solidus#104-external-partials-rebased",
-    "jungle-solidus": "SparkartGroupInc/jungle-solidus#dr3JdTPS-migration-template",
     "solidus-metadata": "solidusjs/metadata#dev"
   }
 }
