--- a/root/site.yml
+++ b/root/site.yml
@@ -49,31 +49,31 @@ pages:
 media_clip_video_image_width: 200
 media_clip_video_image_height: 150
 sections: #Includes information about sections, their pages and assets
-  - default: #Site Default assets to bundle, in order
-      scripts:
-        # Common JavaScript Files (./node_modules/jungle-solidus/common_assets/javascripts/*)
-        - './node_modules/jungle-solidus/common_assets/javascripts/'
-        # Pattern JS Files (./node_modules/jungle-solidus/common_assets/patterns/*)
-        - './node_modules/jungle-solidus/common_assets/patterns/'
-        # Site JS Files (./assets/scripts/*)
-        - './assets/scripts/'
-      styles:
-        # Pattern CSS Files (./node_modules/jungle-solidus/common_assets/patterns/*)
-        - './node_modules/jungle-solidus/common_assets/patterns/'
-        # Site CSS Files (./assets/styles/*)
-        - './assets/styles/'
-      # for this section, only list pages that have custom assets all pages that
-      # are not listed in other sections are assumed to belong to this
-      # pages:
-      #   - example-page:
-      #       styles:
-      #         - './path/to/example.css'
-      #       scripts:
-      #         - './path/to/example.js'
-  - home:
-      pages:
-        - index
-  - legal:
-      pages:
-        - privacy
-        - terms
+  default: #Site Default assets to bundle, in order
+    scripts:
+      # Common JavaScript Files (./node_modules/jungle-solidus/common_assets/javascripts/*)
+      - './node_modules/jungle-solidus/common_assets/javascripts/'
+      # Pattern JS Files (./node_modules/jungle-solidus/common_assets/patterns/*)
+      - './node_modules/jungle-solidus/common_assets/patterns/'
+      # Site JS Files (./assets/scripts/*)
+      - './assets/scripts/'
+    styles:
+      # Pattern CSS Files (./node_modules/jungle-solidus/common_assets/patterns/*)
+      - './node_modules/jungle-solidus/common_assets/patterns/'
+      # Site CSS Files (./assets/styles/*)
+      - './assets/styles/'
+    # for this section, only list pages that have custom assets all pages that
+    # are not listed in other sections are assumed to belong to this
+    # pages:
+    #   - example-page:
+    #       styles:
+    #         - './path/to/example.css'
+    #       scripts:
+    #         - './path/to/example.js'
+  home:
+    pages:
+      - index
+  legal:
+    pages:
+      - privacy
+      - terms
