--- a/root/package.json
+++ b/root/package.json
@@ -5,31 +5,22 @@
   "main": "start.js",
   "scripts": {
     "build": "gulp build",
-    "watch": "gulp _watch"
+    "watch": "gulp watch"
   },
   "devDependencies": {
+    "broadway": "SparkartGroupInc/broadway",
     "gulp": "^3.8.7",
-    "gulp-changed": "^0.4.1",
-    "gulp-concat": "^2.3.4",
-    "gulp-filerev-replace": "solidusjs/gulp-filerev-replace",
-    "gulp-imagemin": "^0.6.2",
-    "gulp-import-css": "^0.1.2",
-    "gulp-livereload": "^2.1.1",
-    "gulp-minify-css": "^0.3.7",
-    "gulp-nodemon": "^1.0.4",
-    "gulp-plumber": "^0.6.6",
-    "gulp-uglify": "^1.0.0",
-    "gulp-util": "^3.0.1",
     "handlebars": "1.3.x",
     "handlebars-helper": "0.0.x",
-    "hbsfy": "~1.3.2",
-    "jungle-solidus": "sparkartgroupinc/jungle-solidus",
+    "js-yaml": "^3.2.3",
+    "jungle-solidus": "SparkartGroupInc/jungle-solidus#v1.4.0",
     "minimist": "^1.1.0",
-    "run-sequence": "^1.0.1",
+    "require-dir": "^0.1.0",
     "underscore": "^1.7.0",
     "underscore.string": "^2.3.3"
   },
   "dependencies": {
-    "solidus": "^1.0.0"
+    "solidus": "^1.1.0",
+    "solidus-metadata": "solidusjs/metadata#dev"
   }
 }
