add predeploy task group
right now only contains _fingerprint task, but could be expanded to contain other tasks

--- a/root/circle.yml
+++ b/root/circle.yml
@@ -15,7 +15,7 @@ deployment:
   production:
     branch: master
     commands:
-     - gulp _fingerprint
+     - gulp predeploy
      - modulus deploy ./deploy -p $CIRCLE_PROJECT_REPONAME --include-modules
   review:
     branch: /^(?!master$)(.*)/
