add edit url for zapier webhook
add edit url for zapier webhook to make it easier to find in the zapier dashboard

--- a/root/circle.yml
+++ b/root/circle.yml
@@ -12,5 +12,5 @@ deployment:
       - npm run deploy-review
 notify:
   webhooks:
-    # Failed Build Notification
+    # Failed Build Notification (https://zapier.com/app/editor/869264)
     - url: https://zapier.com/hooks/catch/n/198yq/
