--- a/root/package.json
+++ b/root/package.json
@@ -13,15 +13,13 @@
     "test": "echo"
   },
   "devDependencies": {
-    "broadway": "SparkartGroupInc/broadway"
+    "broadway": "SparkartGroupInc/broadway",
     "gulp": "^3.8.7",
     "handlebars": "1.3.x",
     "handlebars-helper": "0.0.x",
     "js-yaml": "^3.2.3",
-    "minimist": "^1.1.0",
     "require-dir": "^0.1.0",
-    "underscore": "^1.7.0",
-    "underscore.string": "^2.3.3"
+    "underscore": "^1.7.0"
   },
   "dependencies": {
     "jungle-solidus": "SparkartGroupInc/jungle-solidus",
